srkSetSubProject(${SRK_PROJ_PREFIX})
set(OUTPUT_NAME srk-test)

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")
get_property(SRKPROJ_CORE_DLL GLOBAL PROPERTY "SRKPROJ_CORE_DLL")

get_property(SRKPROJ_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_NAME")
get_property(SRKPROJ_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_INCLUDE")
get_property(SRKPROJ_FRAMEWORK_DLL GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_DLL")

get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_HID_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_HID_DLL")

get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_DLL")

get_property(SRKPROJ_EXTERNAL_GLEW_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_GLEW_DLL")
get_property(SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL")
get_property(SRKPROJ_EXTERNAL_LIBPNG_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBPNG_DLL")
#get_property(SRKPROJ_EXTERNAL_SPIRV_CROSS_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_SPIRV_CROSS_DLL")
get_property(SRKPROJ_EXTERNAL_VULKAN_SDK_HAS_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_VULKAN_SDK_HAS_DLL")
get_property(SRKPROJ_EXTERNAL_VULKAN_SDK_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_VULKAN_SDK_DLL")
get_property(SRKPROJ_EXTERNAL_ZLIB_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_ZLIB_DLL")

get_property(SRKPROJ_EXTERNAL_MIMALLOC_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_NAME")
get_property(SRKPROJ_EXTERNAL_MIMALLOC_LIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_LIB")
get_property(SRKPROJ_EXTERNAL_MIMALLOC_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_DLL")

get_property(SRKPROJ_EXTERNAL_TCMALLOC_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_NAME")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_LIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_LIB")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_DLL")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS")

get_property(SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_D3D11_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D11_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_D3D11_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D11_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_D3D12_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D12_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_D3D12_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D12_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_GL_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_GL_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_GL_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_GL_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL")

get_property(SRKPROJ_MODULE_INPUT_HID_INPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_HID_INPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_HID_INPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_HID_INPUT_DLL")

get_property(SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL")

get_property(SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL")

get_property(SRKPROJ_MODULE_INPUT_XINPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_XINPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_XINPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_XINPUT_DLL")

get_property(SRKPROJ_MODULE_WINDOW_COCOA_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_COCOA_NAME")
get_property(SRKPROJ_MODULE_WINDOW_COCOA_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_COCOA_DLL")

get_property(SRKPROJ_MODULE_WINDOW_WIN32API_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_WIN32API_NAME")
get_property(SRKPROJ_MODULE_WINDOW_WIN32API_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_WIN32API_DLL")

get_property(SRKPROJ_MODULE_WINDOW_X11_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_X11_NAME")
get_property(SRKPROJ_MODULE_WINDOW_X11_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_X11_DLL")

srkCollectSrcFiles(srcFiles)
srkAddExecutableSourceGroup(${PROJECT_NAME} MACOSX_BUNDLE ${srcFiles})
target_include_directories(${PROJECT_NAME} PUBLIC
    ${SRKPROJ_CORE_INCLUDE}
    ${SRKPROJ_FRAMEWORK_INCLUDE}
    ${SRK_SOURCE_DIR}
)
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_DEFINITIONS})

if (SRK_OS_MACOS)
    srkSetTargetRpath(${PROJECT_NAME} "./../../../libs")
else ()
    srkSetTargetRpath(${PROJECT_NAME} "./libs")
endif ()

set(linkLibs
    ${SRKPROJ_CORE_NAME}
    ${SRKPROJ_FRAMEWORK_NAME}
    ${SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_BC7_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_FBX_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_PNG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME}
)

set(USE_MIMALLOC ON)
set(USE_TCMALLOC OFF)

if (SRK_OS_LINUX)
    list(APPEND linkLibs dl pthread)
    srkAppendIf(X11_FOUND linkLibs X11)
elseif (SRK_OS_MACOS)
    list(APPEND linkLibs "-framework Cocoa")
endif ()

srkDelayLoadImport(${SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME})
srkDelayLoadImport(${SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME})
srkDelayLoadImport(${SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME})
srkDelayLoadImport(${SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME})
srkDelayLoadImport(${SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME})
srkDelayLoadImport(${SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME})

if (SRK_CXX_COMPILER_MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS /SUBSYSTEM:WINDOWS)
endif ()

set(OUTPUT_LIBS_DIR ${SRK_PROJECT_BUILD_DIR}/libs)
if (SRK_OS_WINDOWS)
    set(OUTPUT_ROOT_OR_LIBS_DIR ${SRK_PROJECT_BUILD_DIR})
else ()
    set(OUTPUT_ROOT_OR_LIBS_DIR ${OUTPUT_LIBS_DIR})
endif ()

if (SRK_OS_WINDOWS)
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove_directory ${SRK_PROJECT_BUILD_DIR}/Resources
        COMMAND mklink /J \"${SRK_PROJECT_BUILD_DIR}/Resources\" \"${SRK_SOURCE_DIR}/Resources\"
    )
else ()
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E create_symlink ${SRK_SOURCE_DIR}/Resources ${SRK_PROJECT_BUILD_DIR}/Resources
    )
endif ()

set(prebuildCommands COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_LIBS_DIR})

srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_CORE_DLL} ${OUTPUT_ROOT_OR_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_FRAMEWORK_DLL} ${OUTPUT_ROOT_OR_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_BC7_CONVERTER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_FBX_CONVERTER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_PNG_CONVERTER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_LIBPNG_DLL} ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_ZLIB_DLL} ${OUTPUT_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_GLEW prebuildCommands "${SRKPROJ_EXTERNAL_GLEW_DLL}" ${OUTPUT_LIBS_DIR})
#srkAppendCopyFileCmdIf(SPIRV_CROSS prebuildCommands "${SRKPROJ_EXTERNAL_SPIRV_CROSS_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_GL prebuildCommands "${SRKPROJ_MODULE_GRAPHICS_GL_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_D3D11 prebuildCommands "${SRKPROJ_MODULE_GRAPHICS_D3D11_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_D3D12 prebuildCommands "${SRKPROJ_MODULE_GRAPHICS_D3D12_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_VULKAN prebuildCommands "${SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL}" ${OUTPUT_LIBS_DIR})

set(copyVulkanSDKDll False)
if (SRK_ENABLE_MODULE_GRAPHICS_VULKAN AND SRKPROJ_EXTERNAL_VULKAN_SDK_HAS_DLL)
    set(copyVulkanSDKDll True)
endif ()
srkAppendCopyFileCmdIf(copyVulkanSDKDll prebuildCommands "${SRKPROJ_EXTERNAL_VULKAN_SDK_DLL}" ${OUTPUT_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_HID prebuildCommands "${SRKPROJ_EXTENSION_HID_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_DIRECT_INPUT prebuildCommands "${SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUTS_HID_INPUT prebuildCommands "${SRKPROJ_MODULE_INPUT_HID_INPUT_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUTS_RAW_INPUT prebuildCommands "${SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUTS_XINPUT prebuildCommands "${SRKPROJ_MODULE_INPUT_XINPUT_DLL}" ${OUTPUT_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOWS_COCOA prebuildCommands "${SRKPROJ_MODULE_WINDOW_COCOA_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOWS_WIN32API prebuildCommands "${SRKPROJ_MODULE_WINDOW_WIN32API_DLL}" ${OUTPUT_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOWS_X11 prebuildCommands "${SRKPROJ_MODULE_WINDOW_X11_DLL}" ${OUTPUT_LIBS_DIR})

set(prebuildDepends
    ${SRKPROJ_FRAMEWORK_NAME}
    ${SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_BC7_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_FBX_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_PNG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME}
    ${SRKPROJ_MODULE_GRAPHICS_SHADER_TRANSPILER_NAME}
)

srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_GL prebuildDepends "${SRKPROJ_MODULE_GRAPHICS_GL_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_D3D11 prebuildDepends "${SRKPROJ_MODULE_GRAPHICS_D3D11_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_D3D12 prebuildDepends "${SRKPROJ_MODULE_GRAPHICS_D3D12_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_VULKAN prebuildDepends "${SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME}")

srkAppendIf(SRK_ENABLE_MODULE_INPUT_DIRECT_INPUT prebuildDepends "${SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_INPUTS_HID_INPUT prebuildDepends "${SRKPROJ_MODULE_INPUT_HID_INPUT_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_INPUTS_RAW_INPUT prebuildDepends "${SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_INPUTS_XINPUT prebuildDepends "${SRKPROJ_MODULE_INPUT_XINPUT_NAME}")

srkAppendIf(SRK_ENABLE_MODULE_WINDOWS_COCOA prebuildDepends "${SRKPROJ_MODULE_WINDOW_COCOA_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_WINDOWS_WIN32API prebuildDepends "${SRKPROJ_MODULE_WINDOW_WIN32API_NAME}")
srkAppendIf(SRK_ENABLE_MODULE_WINDOWS_X11 prebuildDepends "${SRKPROJ_MODULE_WINDOW_X11_NAME}")

if (USE_MIMALLOC)
    list(APPEND linkLibs ${SRKPROJ_EXTERNAL_MIMALLOC_LIB})
    list(APPEND prebuildDepends ${SRKPROJ_EXTERNAL_MIMALLOC_NAME})
    srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_MIMALLOC_DLL} ${OUTPUT_ROOT_OR_LIBS_DIR})
endif ()
if (USE_TCMALLOC)
    if (SRK_CXX_COMPILER_MSVC)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS}")
    endif ()
    list(APPEND linkLibs ${SRKPROJ_EXTERNAL_TCMALLOC_LIB})
    list(APPEND prebuildDepends ${SRKPROJ_EXTERNAL_TCMALLOC_NAME})
    srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_TCMALLOC_DLL} ${OUTPUT_ROOT_OR_LIBS_DIR})
endif ()

set(prebuildProj ${PROJECT_NAME}-Prebuild)
add_custom_target(${prebuildProj} ALL ${prebuildCommands})
add_dependencies(${prebuildProj} ${prebuildDepends})
set_property(TARGET ${prebuildProj} PROPERTY FOLDER Tests)

add_dependencies(${PROJECT_NAME} ${prebuildProj})
target_link_libraries(${PROJECT_NAME} ${linkLibs})
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER Tests)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX})