srkSetSubProject(${SRK_PROJ_PREFIX})

set(OUTPUT_NAME srk-test)

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")
get_property(SRKPROJ_CORE_DLL GLOBAL PROPERTY "SRKPROJ_CORE_DLL")

get_property(SRKPROJ_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_NAME")
get_property(SRKPROJ_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_INCLUDE")
get_property(SRKPROJ_FRAMEWORK_DLL GLOBAL PROPERTY "SRKPROJ_FRAMEWORK_DLL")

get_property(SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_NAME")
get_property(SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_INCLUDE")
get_property(SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_DLL")

get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_INCLUDE")
get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_INCLUDE")
get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_BC7_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_BC7_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_INCLUDE")
get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_FBX_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_FBX_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_HID_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_HID_DLL")

get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_INCLUDE")
get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_NAME")
get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_INCLUDE")
get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_PNG_CONVERTER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_PNG_CONVERTER_DLL")

get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_INCLUDE")
get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL")

get_property(SRKPROJ_EXTENSION_SHADER_TRANSPILER_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_TRANSPILER_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_TRANSPILER_INCLUDE GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_TRANSPILER_INCLUDE")
get_property(SRKPROJ_EXTENSION_SHADER_TRANSPILER_OUTPUT_NAME GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_TRANSPILER_OUTPUT_NAME")
get_property(SRKPROJ_EXTENSION_SHADER_TRANSPILER_DLL GLOBAL PROPERTY "SRKPROJ_EXTENSION_SHADER_TRANSPILER_DLL")

get_property(SRKPROJ_EXTERNAL_GLEW_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_GLEW_DLL")
get_property(SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL")
get_property(SRKPROJ_EXTERNAL_LIBPNG_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_LIBPNG_DLL")
get_property(SRKPROJ_EXTERNAL_VULKAN_SDK_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_VULKAN_SDK_DLL")
get_property(SRKPROJ_EXTERNAL_ZLIB_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_ZLIB_DLL")

get_property(SRKPROJ_EXTERNAL_MIMALLOC_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_NAME")
get_property(SRKPROJ_EXTERNAL_MIMALLOC_LIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_LIB")
get_property(SRKPROJ_EXTERNAL_MIMALLOC_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_MIMALLOC_DLL")

get_property(SRKPROJ_EXTERNAL_TCMALLOC_NAME GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_NAME")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_LIB GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_LIB")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_DLL")
get_property(SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS GLOBAL PROPERTY "SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS")

get_property(SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL GLOBAL PROPERTY "SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_D3D11_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D11_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_D3D11_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D11_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_D3D12_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D12_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_D3D12_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_D3D12_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_GL_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_GL_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_GL_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_GL_DLL")

get_property(SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME")
get_property(SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL")

get_property(SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL")

get_property(SRKPROJ_MODULE_INPUT_EVDEV_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_EVDEV_NAME")
get_property(SRKPROJ_MODULE_INPUT_EVDEV_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_EVDEV_DLL")

get_property(SRKPROJ_MODULE_INPUT_HID_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_HID_NAME")
get_property(SRKPROJ_MODULE_INPUT_HID_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_HID_DLL")

get_property(SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL")

get_property(SRKPROJ_MODULE_INPUT_X11_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_X11_NAME")
get_property(SRKPROJ_MODULE_INPUT_X11_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_X11_DLL")

get_property(SRKPROJ_MODULE_INPUT_XINPUT_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_XINPUT_NAME")
get_property(SRKPROJ_MODULE_INPUT_XINPUT_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_INPUT_XINPUT_DLL")

get_property(SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_NAME")
get_property(SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_DLL")

get_property(SRKPROJ_MODULE_WINDOW_COCOA_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_COCOA_NAME")
get_property(SRKPROJ_MODULE_WINDOW_COCOA_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_COCOA_DLL")

get_property(SRKPROJ_MODULE_WINDOW_WIN32API_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_WIN32API_NAME")
get_property(SRKPROJ_MODULE_WINDOW_WIN32API_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_WIN32API_DLL")

get_property(SRKPROJ_MODULE_WINDOW_X11_NAME GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_X11_NAME")
get_property(SRKPROJ_MODULE_WINDOW_X11_DLL GLOBAL PROPERTY "SRKPROJ_MODULE_WINDOW_X11_DLL")

srkCollectSrcFiles(srcFiles)
if (SRK_OS_ANDROID)
    srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
else ()
    srkAddExecutableSourceGroup(${PROJECT_NAME} MACOSX_BUNDLE ${srcFiles})
endif ()

set(includeDir
    ${SRKPROJ_CORE_INCLUDE}
    ${SRKPROJ_FRAMEWORK_INCLUDE}
)
srkAppendIf(SRK_ENABLE_EXTENSION_ANDROID_NATIVE_APPLICATION includeDir SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_ASTC_CONVERTER includeDir SRKPROJ_EXTENSION_ASTC_CONVERTER_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_BC7_CONVERTER includeDir SRKPROJ_EXTENSION_BC7_CONVERTER_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_FBX_CONVERTER includeDir SRKPROJ_EXTENSION_FBX_CONVERTER_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_JPEG_CONVERTER includeDir SRKPROJ_EXTENSION_JPEG_CONVERTER_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_PNG_CONVERTER includeDir SRKPROJ_EXTENSION_PNG_CONVERTER_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_SHADER_SCRIPT includeDir SRKPROJ_EXTENSION_SHADER_SCRIPT_INCLUDE)
srkAppendIf(SRK_ENABLE_EXTENSION_SHADER_TRANSPILER includeDir SRKPROJ_EXTENSION_SHADER_TRANSPILER_INCLUDE)
target_include_directories(${PROJECT_NAME} PUBLIC ${includeDir})

target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_DEFINITIONS})

if (SRK_OS_MACOS)
    srkSetTargetRpath(${PROJECT_NAME} "./../../../libs")
elseif (SRK_OS_LINUX)
    srkSetTargetRpath(${PROJECT_NAME} "./libs")
endif ()

set(linkLibs
    ${SRKPROJ_CORE_NAME}
    ${SRKPROJ_FRAMEWORK_NAME}
)
srkAppendIf(SRK_ENABLE_EXTENSION_ANDROID_NATIVE_APPLICATION linkLibs SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_ASTC_CONVERTER linkLibs SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_BC7_CONVERTER linkLibs SRKPROJ_EXTENSION_BC7_CONVERTER_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_FBX_CONVERTER linkLibs SRKPROJ_EXTENSION_FBX_CONVERTER_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_JPEG_CONVERTER linkLibs SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_PNG_CONVERTER linkLibs SRKPROJ_EXTENSION_PNG_CONVERTER_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_SHADER_SCRIPT linkLibs SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME)
srkAppendIf(SRK_ENABLE_EXTENSION_SHADER_TRANSPILER linkLibs SRKPROJ_EXTENSION_SHADER_TRANSPILER_NAME)

set(USE_MIMALLOC ON)
set(USE_TCMALLOC OFF)

if (NOT SRK_ENABLE_EXTERNAL_MIMALLOC)
    set(USE_MIMALLOC OFF)
endif ()
if (NOT SRK_ENABLE_EXTERNAL_TCMALLOC)
    set(USE_TCMALLOC OFF)
endif ()

if (SRK_OS_LINUX)
    list(APPEND linkLibs dl pthread)
    srkAppendIf(X11_FOUND linkLibs X11 dl)
elseif (SRK_OS_MACOS)
    list(APPEND linkLibs "-framework Cocoa")
#elseif (SRK_OS_ANDROID)
#    list(APPEND linkLibs dl)
endif ()

srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_ASTC_CONVERTER SRKPROJ_EXTENSION_ASTC_CONVERTER_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_BC7_CONVERTER SRKPROJ_EXTENSION_BC7_CONVERTER_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_FBX_CONVERTER SRKPROJ_EXTENSION_FBX_CONVERTER_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_JPEG_CONVERTER SRKPROJ_EXTENSION_JPEG_CONVERTER_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_PNG_CONVERTER SRKPROJ_EXTENSION_PNG_CONVERTER_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_SHADER_SCRIPT SRKPROJ_EXTENSION_SHADER_SCRIPT_OUTPUT_NAME)
srkDelayLoadImportIf(SRK_ENABLE_EXTENSION_SHADER_TRANSPILER SRKPROJ_EXTENSION_SHADER_TRANSPILER_OUTPUT_NAME)

if (SRK_CXX_COMPILER_MSVC)
    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS /SUBSYSTEM:WINDOWS)
endif ()

set(OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR}/libs)
set(OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR}/libs)
set(OUTPUT_MANUAL_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR}/libs)

if (SRK_OS_WINDOWS)
    set(OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR})
elseif (SRK_OS_ANDROID)
    set(OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR})
    set(OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR})
    set(OUTPUT_MANUAL_LOAD_LIBS_DIR ${SRK_PROJECT_BUILD_DIR})
endif ()

if (SRK_HOST_OS_WINDOWS)
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove_directory ${SRK_PROJECT_BUILD_DIR}/Resources
        COMMAND mklink /J \"${SRK_PROJECT_BUILD_DIR}/Resources\" \"${SRK_SOURCE_DIR}/Resources\"
    )
else ()
    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E create_symlink ${SRK_SOURCE_DIR}/Resources ${SRK_PROJECT_BUILD_DIR}/Resources
    )
endif ()

set(prebuildCommands COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
set(prebuildCommands COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
set(prebuildCommands COMMAND ${CMAKE_COMMAND} -E make_directory ${OUTPUT_MANUAL_LOAD_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_CORE prebuildCommands SRKPROJ_CORE_DLL ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_FRAMEWORK prebuildCommands SRKPROJ_FRAMEWORK_DLL ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_ANDROID_NATIVE_APPLICATION prebuildCommands SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_DLL ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_ASTC_CONVERTER prebuildCommands SRKPROJ_EXTENSION_ASTC_CONVERTER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_BC7_CONVERTER prebuildCommands SRKPROJ_EXTENSION_BC7_CONVERTER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_FBX_CONVERTER prebuildCommands SRKPROJ_EXTENSION_FBX_CONVERTER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_JPEG_CONVERTER prebuildCommands SRKPROJ_EXTENSION_JPEG_CONVERTER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_PNG_CONVERTER prebuildCommands SRKPROJ_EXTENSION_PNG_CONVERTER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_SHADER_SCRIPT prebuildCommands SRKPROJ_EXTENSION_SHADER_SCRIPT_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_SHADER_TRANSPILER prebuildCommands SRKPROJ_EXTENSION_SHADER_TRANSPILER_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTERNAL_DX_SHADER_COMPILER prebuildCommands SRKPROJ_EXTERNAL_DX_SHADER_COMPILER_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTERNAL_LIBJPEG_TURBO prebuildCommands SRKPROJ_EXTERNAL_LIBJPEG_TURBO_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTERNAL_LIBPNG prebuildCommands SRKPROJ_EXTERNAL_LIBPNG_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_EXTERNAL_ZLIB prebuildCommands SRKPROJ_EXTERNAL_ZLIB_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_EXTERNAL_GLEW prebuildCommands SRKPROJ_EXTERNAL_GLEW_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_GL prebuildCommands SRKPROJ_MODULE_GRAPHICS_GL_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_D3D11 prebuildCommands SRKPROJ_MODULE_GRAPHICS_D3D11_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_D3D12 prebuildCommands SRKPROJ_MODULE_GRAPHICS_D3D12_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_VULKAN prebuildCommands SRKPROJ_MODULE_GRAPHICS_VULKAN_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_GRAPHICS_VULKAN prebuildCommands SRKPROJ_EXTERNAL_VULKAN_SDK_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_EXTENSION_HID prebuildCommands SRKPROJ_EXTENSION_HID_DLL ${OUTPUT_AUTO_DELAY_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_DIRECT_INPUT prebuildCommands SRKPROJ_MODULE_INPUT_DIRECT_INPUT_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_EVDEV prebuildCommands SRKPROJ_MODULE_INPUT_EVDEV_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_HID prebuildCommands SRKPROJ_MODULE_INPUT_HID_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_RAW_INPUT prebuildCommands SRKPROJ_MODULE_INPUT_RAW_INPUT_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_X11 prebuildCommands SRKPROJ_MODULE_INPUT_X11_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_INPUT_XINPUT prebuildCommands SRKPROJ_MODULE_INPUT_XINPUT_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})

srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOW_ANDROID_NATIVE prebuildCommands SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOW_COCOA prebuildCommands SRKPROJ_MODULE_WINDOW_COCOA_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOW_WIN32API prebuildCommands SRKPROJ_MODULE_WINDOW_WIN32API_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})
srkAppendCopyFileCmdIf(SRK_ENABLE_MODULE_WINDOW_X11 prebuildCommands SRKPROJ_MODULE_WINDOW_X11_DLL ${OUTPUT_MANUAL_LOAD_LIBS_DIR})

set(prebuildDepends
    ${SRKPROJ_FRAMEWORK_NAME}
    ${SRKPROJ_EXTENSION_ASTC_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_BC7_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_FBX_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_JPEG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_PNG_CONVERTER_NAME}
    ${SRKPROJ_EXTENSION_SHADER_SCRIPT_NAME}
    ${SRKPROJ_EXTENSION_SHADER_TRANSPILER_NAME}
)

srkAppendIf(SRK_ENABLE_EXTENSION_ANDROID_NATIVE_APPLICATION prebuildDepends SRKPROJ_EXTENSION_ANDROID_NATIVE_APPLICATION_NAME)

srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_GL prebuildDepends SRKPROJ_MODULE_GRAPHICS_GL_NAME)
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_D3D11 prebuildDepends SRKPROJ_MODULE_GRAPHICS_D3D11_NAME)
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_D3D12 prebuildDepends SRKPROJ_MODULE_GRAPHICS_D3D12_NAME)
srkAppendIf(SRK_ENABLE_MODULE_GRAPHICS_VULKAN prebuildDepends SRKPROJ_MODULE_GRAPHICS_VULKAN_NAME)

srkAppendIf(SRK_ENABLE_MODULE_INPUT_DIRECT_INPUT prebuildDepends SRKPROJ_MODULE_INPUT_DIRECT_INPUT_NAME)
srkAppendIf(SRK_ENABLE_MODULE_INPUT_EVDEV prebuildDepends SRKPROJ_MODULE_INPUT_EVDEV_NAME)
srkAppendIf(SRK_ENABLE_MODULE_INPUT_HID prebuildDepends SRKPROJ_MODULE_INPUT_HID_NAME)
srkAppendIf(SRK_ENABLE_MODULE_INPUT_RAW_INPUT prebuildDepends SRKPROJ_MODULE_INPUT_RAW_INPUT_NAME)
srkAppendIf(SRK_ENABLE_MODULE_INPUT_X11 prebuildDepends SRKPROJ_MODULE_INPUT_X11_NAME)
srkAppendIf(SRK_ENABLE_MODULE_INPUT_XINPUT prebuildDepends SRKPROJ_MODULE_INPUT_XINPUT_NAME)

srkAppendIf(SRK_ENABLE_MODULE_WINDOW_ANDROID_NATIVE prebuildDepends SRKPROJ_MODULE_WINDOW_ANDROID_NATIVE_NAME)
srkAppendIf(SRK_ENABLE_MODULE_WINDOW_COCOA prebuildDepends SRKPROJ_MODULE_WINDOW_COCOA_NAME)
srkAppendIf(SRK_ENABLE_MODULE_WINDOW_WIN32API prebuildDepends SRKPROJ_MODULE_WINDOW_WIN32API_NAME)
srkAppendIf(SRK_ENABLE_MODULE_WINDOW_X11 prebuildDepends SRKPROJ_MODULE_WINDOW_X11_NAME)

if (USE_MIMALLOC)
    list(APPEND linkLibs ${SRKPROJ_EXTERNAL_MIMALLOC_LIB})
    list(APPEND prebuildDepends ${SRKPROJ_EXTERNAL_MIMALLOC_NAME})
    srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_MIMALLOC_DLL} ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
endif ()
if (USE_TCMALLOC)
    if (SRK_CXX_COMPILER_MSVC)
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${SRKPROJ_EXTERNAL_TCMALLOC_MSVC_LINKER_FLAGS}")
    endif ()
    list(APPEND linkLibs ${SRKPROJ_EXTERNAL_TCMALLOC_LIB})
    list(APPEND prebuildDepends ${SRKPROJ_EXTERNAL_TCMALLOC_NAME})
    srkAppendCopyFileCmd(prebuildCommands ${SRKPROJ_EXTERNAL_TCMALLOC_DLL} ${OUTPUT_AUTO_IMMEDIATE_LOAD_LIBS_DIR})
endif ()

set(prebuildProj ${PROJECT_NAME}-Prebuild)
add_custom_target(${prebuildProj} ALL ${prebuildCommands})
add_dependencies(${prebuildProj} ${prebuildDepends})
set_property(TARGET ${prebuildProj} PROPERTY FOLDER Tests)

add_dependencies(${PROJECT_NAME} ${prebuildProj})
target_link_libraries(${PROJECT_NAME} ${linkLibs})
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER Tests)
if (SRK_OS_ANDROID)
    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
else ()
    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX})
endif ()