__set_project()
set(__OUTPUT_NAME srk-astc-converter)
set_property(GLOBAL PROPERTY PROJECT_SRK_ASTC_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_ASTC_CONVERTER_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY PROJECT_SRK_ASTC_CONVERTER_OUTPUT_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_ASTC_CONVERTER_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${__OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(PROJECT_SRK_CORE_NAME GLOBAL PROPERTY "PROJECT_SRK_CORE_NAME")
get_property(PROJECT_SRK_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_CORE_INCLUDE")

get_property(PROJECT_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_NAME")
get_property(PROJECT_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_INCLUDE")

get_property(PROJECT_ASTC_ENCODER_NAME GLOBAL PROPERTY "PROJECT_ASTC_ENCODER_NAME")
get_property(PROJECT_ASTC_ENCODER_INCLUDE GLOBAL PROPERTY "PROJECT_ASTC_ENCODER_INCLUDE")

include_directories(
    ${PROJECT_SRK_CORE_INCLUDE}
    ${PROJECT_SRK_FRAMEWORK_INCLUDE}
    ${PROJECT_ASTC_ENCODER_INCLUDE}
)
add_definitions(${SRK_EXTENSION_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} 
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_ASTC_ENCODER_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_SRK_CORE_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
)
string(TOLOWER ${CMAKE_SYSTEM_PROCESSOR} val)
if (val MATCHES "(amd)|(86)")
    __target_link_library_external_project(${PROJECT_NAME} "PROJECT_ASTC_ENCODER_SSE2_SLIB")
elseif (val MATCHES "aarch64")
    __target_link_library_external_project(${PROJECT_NAME} "PROJECT_ASTC_ENCODER_NEON_SLIB")
endif ()
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})
__install(${SRK_EXTENSIONS_DIR_NAME}/${PROJECT_NAME})