srkSetProject()
set(OUTPUT_NAME srk-astc-converter)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_ASTC_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_ASTC_CONVERTER_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_ASTC_CONVERTER_OUTPUT_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_ASTC_CONVERTER_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

get_property(SRKPROJ_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_NAME")
get_property(SRKPROJ_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_FRAMEWORK_INCLUDE")

get_property(SRKPROJ_ASTC_ENCODER_NAME GLOBAL PROPERTY "SRKPROJ_ASTC_ENCODER_NAME")
get_property(SRKPROJ_ASTC_ENCODER_INCLUDE GLOBAL PROPERTY "SRKPROJ_ASTC_ENCODER_INCLUDE")

include_directories(
    ${SRKPROJ_SRK_CORE_INCLUDE}
    ${SRKPROJ_SRK_FRAMEWORK_INCLUDE}
    ${SRKPROJ_ASTC_ENCODER_INCLUDE}
)
add_definitions(${SRK_EXTENSION_DEFINITIONS})
file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
add_dependencies(${PROJECT_NAME} 
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
    ${SRKPROJ_ASTC_ENCODER_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${SRKPROJ_SRK_CORE_NAME}
    ${SRKPROJ_SRK_FRAMEWORK_NAME}
)
string(TOLOWER ${CMAKE_SYSTEM_PROCESSOR} val)
if (val MATCHES "(amd)|(86)")
    srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_ASTC_ENCODER_SSE2_SLIB")
elseif (val MATCHES "aarch64")
    srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "SRKPROJ_ASTC_ENCODER_NEON_SLIB")
endif ()
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_EXTENSIONS_DIR_NAME}/${PROJECT_NAME})