__set_project()
set(__OUTPUT_NAME ae-fbx-converter)
set_property(GLOBAL PROPERTY __PROJECT_AE_FBX_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_FBX_CONVERTER_OUTPUT_NAME ${__OUTPUT_NAME})
set_property(GLOBAL PROPERTY __PROJECT_AE_FBX_CONVERTER_DLL ${__BUILD_DIR}/${__OUTPUT_NAME}${__BUILD_TYPE_POSTFIX}${__AE_DLL_SUFFIX})

get_property(__PROJECT_AE_CORE_NAME GLOBAL PROPERTY "__PROJECT_AE_CORE_NAME")
get_property(__PROJECT_AE_CORE_SRC_DIR GLOBAL PROPERTY "__PROJECT_AE_CORE_SRC_DIR")

get_property(__PROJECT_ZLIB_NAME GLOBAL PROPERTY "__PROJECT_ZLIB_NAME")
get_property(__PROJECT_ZLIB_INCLUDE GLOBAL PROPERTY "__PROJECT_ZLIB_INCLUDE")

get_property(__PROJECT_BOOST_PREPROCESSOR_NAME GLOBAL PROPERTY "__PROJECT_BOOST_PREPROCESSOR_NAME")
get_property(__PROJECT_BOOST_PREPROCESSOR_INCLUDE GLOBAL PROPERTY "__PROJECT_BOOST_PREPROCESSOR_INCLUDE")

include_directories(
    ${__PROJECT_AE_CORE_SRC_DIR}/src/
    ${__PROJECT_ZLIB_INCLUDE}
    ${__PROJECT_BOOST_PREPROCESSOR_INCLUDE}
)
add_definitions(-D AE_EXTENSION_EXPORTS)
file(GLOB SRC_FILES
    "src/*.h" "src/*.cpp"
    "src/*/*.h" "src/*/*.cpp")
__add_library_source_group(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME} 
    ${__PROJECT_AE_CORE_NAME}
    ${__PROJECT_ZLIB_NAME}
    ${__PROJECT_BOOST_PREPROCESSOR_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${__PROJECT_AE_CORE_NAME}
)
__target_link_library_external_project(${PROJECT_NAME} "__PROJECT_ZLIB_LIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${__AE_EXTENSIONS_FOLDER_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${__OUTPUT_NAME})