srkSetProject()
set(OUTPUT_NAME srk-fbx-converter)
set_property(GLOBAL PROPERTY PROJECT_SRK_FBX_CONVERTER_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_FBX_CONVERTER_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY PROJECT_SRK_FBX_CONVERTER_OUTPUT_NAME ${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME})
set_property(GLOBAL PROPERTY PROJECT_SRK_FBX_CONVERTER_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(PROJECT_SRK_CORE_NAME GLOBAL PROPERTY "PROJECT_SRK_CORE_NAME")
get_property(PROJECT_SRK_CORE_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_CORE_INCLUDE")

get_property(PROJECT_SRK_FRAMEWORK_NAME GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_NAME")
get_property(PROJECT_SRK_FRAMEWORK_INCLUDE GLOBAL PROPERTY "PROJECT_SRK_FRAMEWORK_INCLUDE")

get_property(PROJECT_ZLIB_NAME GLOBAL PROPERTY "PROJECT_ZLIB_NAME")
get_property(PROJECT_ZLIB_INCLUDE GLOBAL PROPERTY "PROJECT_ZLIB_INCLUDE")

include_directories(
    ${PROJECT_SRK_CORE_INCLUDE}
    ${PROJECT_SRK_FRAMEWORK_INCLUDE}
    ${PROJECT_ZLIB_INCLUDE}
)
add_definitions(${SRK_EXTENSION_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
    ${PROJECT_ZLIB_NAME}
)
target_link_libraries(${PROJECT_NAME}
    ${PROJECT_SRK_CORE_NAME}
    ${PROJECT_SRK_FRAMEWORK_NAME}
)
srkTargetLinkLibraryExternalProject(${PROJECT_NAME} "PROJECT_ZLIB_LIB")
set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_EXTENSIONS_DIR_NAME}/${PROJECT_NAME})