srkSetProject()
set(OUTPUT_NAME srk-hid)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_HID_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_SRK_HID_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_SRK_HID_DLL ${SRK_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_SRK_CORE_NAME GLOBAL PROPERTY "SRKPROJ_SRK_CORE_NAME")
get_property(SRKPROJ_SRK_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_SRK_CORE_INCLUDE")

include_directories(
    src/srk/
    ${SRKPROJ_SRK_CORE_INCLUDE}
)
add_definitions(${SRK_EXTENSION_DEFINITIONS})
file(GLOB_RECURSE SRC_FILES "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${SRC_FILES})
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_SRK_CORE_NAME}
)

set(linkLibs
    ${SRKPROJ_SRK_CORE_NAME}
)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs hid.lib SetupAPI.lib)
elseif (SRK_OS_LINUX)
    list(APPEND linkLibs udev)
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_INPUT_MODULES_DIR}/${PROJECT_NAME})