srkSetSubProject(${SRK_EXTENSION_PROJ_PREFIX})
set(OUTPUT_NAME ${SRK_EXTENSION_OUTPUT_NAME_PREFIX}hid)
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_EXTENSION_HID_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")

file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
target_include_directories(${PROJECT_NAME} PUBLIC
    src/srk/
    ${SRKPROJ_CORE_INCLUDE}
)
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_EXTENSION_DEFINITIONS})
add_dependencies(${PROJECT_NAME}
    ${SRKPROJ_CORE_NAME}
)

set(linkLibs
    ${SRKPROJ_CORE_NAME}
)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs hid.lib SetupAPI.lib)
elseif (SRK_OS_LINUX)
    list(APPEND linkLibs udev)
endif ()
target_link_libraries(${PROJECT_NAME} ${linkLibs})

set_property(TARGET ${PROJECT_NAME} PROPERTY FOLDER ${SRK_EXTENSIONS_DIR_NAME})
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${SRK_MODULES_INPUTS_DIR}/${PROJECT_NAME})